Add main landing page documentation
This does not include the main projects documentation nor
their versioning, just introduce the initial scaffolding.

Signed-off-by: Jean-Philippe Evrard <jean-philippe.evrard+rochepub@external.roche.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -63,6 +63,7 @@ version = "0.14.4-dev"
 versionWithBuildId = "0.14.4-dev"
 github_repo = "https://github.com/evrardj-roche/external-secrets-website"
 github_project_repo = "https://github.com/evrardj-roche/external-secrets"
+github_reloader_repo = "https://github.com/evrardj-roche/reloader"
 github_branch = "main"
 #gcs_engine_id = "d72aa9b2712488cc3"
 #offlineSearch = false
