feat: context-aware search
Signed-off-by: Gustavo Carvalho <gustavo.carvalho@container-solutions.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -52,7 +52,7 @@ style = "tango"
 noClasses = false
 
 [outputs]
-home = [ "HTML", "print", "RSS", "redirects" ]
+home = [ "HTML", "print", "RSS", "JSON", "redirects" ]
 section = [ "HTML", "print", "RSS" ]
 
 [params]
